RESOLVED FIXED116516
REGRESSION(r150393): editing/inserting/typing-at-end-of-line.html fails
https://bugs.webkit.org/show_bug.cgi?id=116516
Summary REGRESSION(r150393): editing/inserting/typing-at-end-of-line.html fails
Ryosuke Niwa
Reported 2013-05-20 23:16:29 PDT
REGRESSION(r150393): editing/inserting/typing-at-end-of-line.html
Attachments
Fixes the bug (2.10 KB, patch)
2013-05-21 00:36 PDT, Ryosuke Niwa
no flags
Fixes DRT (2.11 KB, patch)
2013-05-21 14:23 PDT, Ryosuke Niwa
ap: review+
Ryosuke Niwa
Comment 1 2013-05-21 00:36:56 PDT
Created attachment 202389 [details] Fixes the bug
Ryosuke Niwa
Comment 2 2013-05-21 00:38:50 PDT
WebKit Commit Bot
Comment 3 2013-05-21 13:40:40 PDT
Re-opened since this is blocked by bug 116573
Ryosuke Niwa
Comment 4 2013-05-21 14:23:31 PDT
Created attachment 202470 [details] Fixes DRT
Alexey Proskuryakov
Comment 5 2013-05-21 14:25:17 PDT
Comment on attachment 202470 [details] Fixes DRT View in context: https://bugs.webkit.org/attachment.cgi?id=202470&action=review > Tools/DumpRenderTree/mac/DumpRenderTree.mm:549 > - [webView setDefersCallbacks:NO]; > [webView setGrammarCheckingEnabled:YES]; > + > + [webView setDefersCallbacks:NO]; Why this change?
Ryosuke Niwa
Comment 6 2013-05-21 14:26:42 PDT
Comment on attachment 202470 [details] Fixes DRT View in context: https://bugs.webkit.org/attachment.cgi?id=202470&action=review >> Tools/DumpRenderTree/mac/DumpRenderTree.mm:549 >> + [webView setDefersCallbacks:NO]; > > Why this change? I matched the ordering.
Ryosuke Niwa
Comment 7 2013-05-21 14:27:34 PDT
Note You need to log in before you can comment on or make changes to this bug.