REGRESSION(r150393): editing/inserting/typing-at-end-of-line.html fails https://bugs.webkit.org/show_bug.cgi?id=116516

Reviewed by Alexey Proskuryakov.

Reset states in DumpRenderTree. The fix for WebKitTestRunner should be implemented in the bug 116577.

* DumpRenderTree/mac/DumpRenderTree.mm:
(createWebViewAndOffscreenWindow): Match the ordering.
(resetWebViewToConsistentStateBeforeTesting): Reset text replacement states.


Canonical link: https://commits.webkit.org/134880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150479 268f45cc-cd09-0410-ab3c-d52691b4dbfc